--- a/.github/workflows/developer_pv321webapp.yml
+++ b/.github/workflows/developer_pv321webapp.yml
@@ -39,13 +39,22 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+    permissions:
+      id-token: write #This is required for requesting the JWT
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
       
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5D3C14BEDD5D4AC6BD440AE57D9F039A }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_AF1DB8DCFF3D4F8DB7FFA7B30E949B5C }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F5697609428348D7ADC94B491ECD87EC }}
+
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
@@ -53,4 +62,4 @@ jobs:
           app-name: 'pv321webApp'
           slot-name: 'Production'
           package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_41637733E0DE485CA72EF335FB81C9CD }}
+          
